update SellOrder: checkMinTotal, sellPriceByRate

--- a/src/markup/accounts.html
+++ b/src/markup/accounts.html
@@ -144,7 +144,7 @@
                         <dt>매도가격</dt>
                         <dd class="sellPrice">
                             <div class="sellPrice-inputs">
-                                <input type="number" min="0" />
+                                <input type="number" min="0" required />
                                 <small class="unit"></small>
                             </div>
                             <div class="sellPrice-options">
@@ -194,12 +194,12 @@
                         </dd>
                         <dt>주문수량</dt>
                         <dd class="orderQuantity">
-                            <input type="number" min="0" />
+                            <input type="number" min="0" required />
                             <small class="market-unit"></small>
                         </dd>
                         <dt>주문총액</dt>
                         <dd class="totalOrderAmount">
-                            <input type="number" min="0" />
+                            <input type="number" min="0" required />
                             <small class="unit"></small>
                         </dd>
                     </dl>
