--- a/src/markup/accounts.html
+++ b/src/markup/accounts.html
@@ -180,13 +180,17 @@
                                     />
                                     <span>20%</span>
                                 </label>
-                            </div>
-                            <div class="sellPrice-options-input">
                                 <label>
+                                    <input
+                                        type="radio"
+                                        name="sellPrice-rate"
+                                        value="etc"
+                                    />
                                     <span>직접 입력</span>
                                     <input
                                         type="number"
-                                        name="sellPrcie-rate-input"
+                                        name="sellPrcie-rate-etc"
+                                        value=""
                                     />
                                     <small class="percent">%</small>
                                 </label>
